using System.Collections;
using System.Collections.Generic;
using UnityEngine;

public class AnimatorParameter : MonoBehaviour
{
    public const string ForwardSpeed = "ForwardSpeed";
    public const string YSpeed = "YSpeed";
    public const string XSpeed = "XSpeed";

    public const string AttackO = "AttackO";
    public const string AttackX = "AttackX";

    public const string ComboAttack = "ComboAttack";

    public const string Vault = "Vault";
    public const string Dodge = "Dodge";
    public const string Jump  = "Jump";
    public const string IsFalling = "IsFalling";
    public const string IsShowingWeapon = "IsShowingWeapon";

    public const string ActorAttackType = "ActorAttackType";
    public const string ActorAttackStep = "ActorAttackStep";
    public const string ActorGetHitType = "ActorGetHitType";

    public const string TriggerClimbSystem = "TriggerClimbSystem";
    public const string HangingMoveDir = "HangingMoveDir";

    public const string AttackUp = "AttackUp";

    public const string LeftFootWeight = "LeftFootWeight";
    public const string RightFootWeight = "RightFootWeight";
}
